[project]
name = "comfyui_emojiiii_custom_nodes"
description = "Nodes:MultiTextEncode, KolorsMultiTextEncode"
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/emojiiii/ComfyUI_Emojiiii_Custom_Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "emojiiii"
DisplayName = "ComfyUI_Emojiiii_Custom_Nodes"
Icon = ""
